--- a/bookplace/core/templates/core/frontpage.html
+++ b/bookplace/core/templates/core/frontpage.html
@@ -5,48 +5,50 @@ Carti noi
 {% endblock %}
 
 {% block content %}
-<div class="bg-success" style="width: 99.1vw;margin-top: 50px;height: 95vh;">
-  <div style="height: 100vh;width: 99.1vw;margin-top: 50px;">
-    {% include 'store/partials/carusel_c_n.html' %}
-    <div class="container d-flex justify-content-around flex-wrap gap-5 mt-4">
-      <a href="{% url 'contact' %}" class="text-light" style="text-decoration: none;font-size: larger;"><i class="fa-solid fa-phone"></i>  Contact</a>
-    {% if request.user.is_authenticated %}
-      <a href="{% url 'myaccount' %}" class="text-light" style="text-decoration: none;font-size: larger;"><i class="fa-solid fa-user"></i>  Contul meu</a>
-      <a href="{% url 'my_store' %}" class="text-light" style="text-decoration: none;font-size: larger;"><i class="fa-sharp fa-solid fa-basket-shopping"></i>  Magazinul meu</a>
-    {% else %}
-      <a href="{% url 'login' %}" class="text-light" style="text-decoration: none;font-size: larger;"><i class="fa-solid fa-user-check"></i>  Conectare</a>
-      <a href="{% url 'signup' %}" class="text-light" style="text-decoration: none;font-size: larger;"><i class="fa-solid fa-user-plus"></i>  Inregistrare</a>
-    {% endif %}
+  <div class="bg-lime-600" style="width: 99.1vw;height: 575px;">
+    <div style="height: 100vh;width: 99.1vw;">
+      {% include 'store/partials/carusel_c_n.html' %}
     </div>
   </div>
 </div>
-<div class="card mx-auto rounded-4 shadow p-3 mb-5 mt-5 bg-white rounded border-0" style="background-color: white; width: 95%; height: 90%; margin-bottom: 5%;">
-  <h1 class="card-title mx-auto">Carti noi:</h1>
+<div class="card mx-auto shadow-lg p-3 bg-gray-100 border-0" style=" width: 95%; height: 100%;">
+  <h1 class="flex justify-center mx-auto text-6xl" style="font-family:'Dancing Script'">Carti noi:</h1>
   {% include 'store/partials/products.html' %}
   <div class="mx-auto">
     <nav aria-label="Page navigation example">
       <ul class="pagination">
         {% if products_list.has_previous %}
-        <li class="page-item">
-            <a class="page-link text-success" href="?page1" style="text-decoration: none;">&laquo; </a>
-        </li>
-        <li class="page-item">
-          <a class="page-link text-success" href="?page{{ products_list.previous_page_number }}" style="text-decoration: none;">&#8249;</a>
-        </li>
-        {% endif %}
-        {% for i in nums %}
-          <li class="page-item">
-              <a class="page-link text-success" href="?page={{ forloop.counter }}">{{ forloop.counter }}</a>
-          </li>
-        {% endfor %}
-
-        {% if products_list.has_next %}
-        <li class="page-item">
-          <a class="page-link text-success" href="?page={{ products_list.next_page_number }}" style="text-decoration: none;">&#8250;</a>
-        </li>
-        <li class="page-item">
-          <a class="page-link text-success" href="?page={{ products_list.paginator.num_pages }}" style="text-decoration: none;">&raquo;</a>
-        </li>
+        <div aria-label="Page navigation example">
+          <ul class="inline-flex items-center -space-x-px">
+            <li class="h-[10px]">
+              <a href="?page1" class="block px-3 py-2 ml-0 leading-tight text-gray-500 bg-white border border-gray-300 rounded-l-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
+                <i class="fa-solid fa-angles-left"></i>
+              </a>
+            </li>
+            <li class="h-[10px]">
+              <a href="?page={{ products_list.next_page_number }}" class="block px-3 py-2 ml-0 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
+                <i class="fa-solid fa-angle-left"></i>
+              </a>
+            </li>
+            {% endif %}
+            {% for i in nums %}
+            <li class="h-[10px]">
+                <a href="?page={{ forloop.counter }}" class="px-3 py-2 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">{{ forloop.counter }}</a>
+              </li>
+            {% endfor %}
+            {% if products_list.has_next %}
+            <li class="h-[10px]">
+              <a href="?page={{ products_list.paginator.num_pages }}" class="block px-3 py-2 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
+                <i class="fa-solid fa-angle-right"></i>
+              </a>
+            </li>
+            <li class="h-[10px]">
+              <a href="?page={{ products_list.paginator.num_pages }}" class="block px-3 py-2 leading-tight text-gray-500 bg-white border border-gray-300 rounded-r-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
+                <i class="fa-solid fa-angles-right"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
         {% endif %}
       </ul>
     </nav>
