--- a/bookplace/store/templates/store/partials/products.html
+++ b/bookplace/store/templates/store/partials/products.html
@@ -1,4 +1,50 @@
-<div class="d-flex justify-content-center flex-row flex-wrap gap-4  " style="margin-top: 50px;margin-bottom: 5%;margin-left: 2%;margin-right: 2%;">
+<div class="flex justify-center flex-row flex-wrap gap-4" style="margin-top: 50px;margin-bottom: 5%;margin-left: 2%;margin-right: 2%;">
+{% for product in products_list %}
+<div class="card relative shadow-2xl rounded-3xl bg-white" style="width: 400px; height: 700px;margin-bottom: 80px;">
+    <a href="{% url 'product_detail'  product.category.slug product.slug %}"> 
+        <div class="flex justify-center self-center items-center p-2" style="width: 100%;"> 
+            <img class="rounded-3xl mt-3" src="{{ product.get_thumbnail }}" width="350px" height="350px" alt="Image of {{ product.title }}">
+        </div>
+        <div style=" min-height: 280px;">
+                <a href="{% url 'product_detail'  product.category.slug product.slug %}" style="color: black; text-decoration: none;">
+                    <div class="text-lime-600 mt-3" align="center" style="min-height: 90px;">
+                        <p style="font-size: large;"><b>{{ product.title }}</b></p>  
+                    </div>
+                </a>
+                <div class="flex align-self-end">
+                    <div class="flex me-auto justify-start p-2" style="max-height: 100px;">
+                        <a href="{% url 'product_detail'  product.category.slug product.slug %}" style="color: black; text-decoration: none;max-width: 230px;max-height: 100px;">
+                            <p class="text-lime-600" align="left" style="font-size: large;"><i class="fa-solid fa-user"></i>&nbsp;{{product.author}}</p>
+                            <p class="text-lime-600" align="left" style="font-size: large;"><i class="fa-solid fa-star"></i>&nbsp;{{ product.get_rating }}/10 [{{ product.reviews.count }}]</span></p> 
+                            <p class="text-lime-600" align="left" style="font-size: large;"><i class="fa-solid fa-globe"></i>&nbsp;{{product.limba}}</p>
+                        </a>
+                    </div>
+                    <div class="mx-auto">
+                        <a href="{{ product.pdf.url }}" download class="flex align-self-start row mb-2" style="text-decoration: none;">
+                            <button class="btn flex align-items-center justify-center text-light border-o rounded-3xl p-2" style="width: 60px;height: 60px;">
+                                <i class="fa-sharp text-lime-600 fa-solid fa-download fa-2xl"></i>
+                            </button>
+                        </a>
+                        <a href="{% url 'user_wishlist' product.id %}" class="flex align-self-end row mt-2" style="text-decoration: none;">
+                            <button class="btn flex align-items-center justify-center text-light border-o rounded-3xl p-2" style="width: 60px;height: 60px;">
+                                <i class="fa-sharp text-lime-600 fa-solid fa-heart fa-2xl"></i>
+                            </button>
+                        </a>
+                    </div>
+                </div>
+                <a href="{% url 'publisher_detail' product.user.id %}" style="text-decoration: none;" class="absolute bottom-0 text-white">
+                    <div class="flex justify-center align-bottom bg-lime-600 rounded-b-xl border-0 text-[20px]" style="width: 400px;padding-bottom: 7px;padding-top: 7px;">
+                            <p><i class="fa-solid fa-at"></i>&nbsp;{% firstof product.user.get_full_name product.user.username %}</p>
+                    </div>
+                </a>
+        </div>
+    </a>
+</div>
+{% endfor %}
+</div>
+</div>
+
+<!-- <div class="d-flex justify-content-center flex-row flex-wrap gap-4  " style="margin-top: 50px;margin-bottom: 5%;margin-left: 2%;margin-right: 2%;">
     {% for product in products_list %}
         <div style="margin-bottom: -50px;" align="center"> 
                 <div class="card shadow p-3 bg-white border-0 rounded-4" style="width: 400px; height: 700px;margin-bottom: 80px;">
@@ -45,4 +91,4 @@
                 </div>
         </div>
     {% endfor %}
-</div>
+</div> -->
